# TradingAgents

./: .env.example  .gitignore  README.md  generate_pdfs.py  main.py  pyproject.toml  requirements.txt  setup.py
cli/: main.py  utils.py
tradingagents/: __init__.py  default_config.py
tradingagents/agents/analysts/: fundamentals_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  memory.py
tradingagents/dataflows/: __init__.py  finnhub_utils.py  interface.py  yfin_utils.py
tradingagents/graph/: signal_processing.py  trading_graph.py
tradingagents/llm_providers/: __init__.py  openrouter.py
tradingagents/utils/: __init__.py  pdf_generator.py
